--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}ChatRoom{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
@@ -13,6 +13,10 @@
         {% endif %}
     </div>
     {{ wtf.quick_form(form) }}
-    <p>The local date and time is {{ moment(current_time).format('LLLL')}}.</p>
+    <p>The local date and time is {{ moment(current_time).format('LLLL') }}.</p>
     <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
 {% endblock %}
