- 2017.6.15     - 今日走通了ActiveMQ的连接功能, 撸了一个简易的flask_mq, 可以用组件注册的方式在App中加载.     - 可以通过shell进入debug, 单独测试send和subscribe功能         - 不能用`Evenlet`启动, 以`Evenlet`启动就不能服务器主动发送消息     - 用户进入聊天页面后可以加载最近50条聊天记录     - 目前的版本用户发送的消息会被推送到ActiveMQ, 显示在游览器上的消息都是从ActiveMQ上订阅的.     - **TODO**         - 分离用户自己发送消息和接受别人消息再推送到游览器的通道         - 增加"消息发送成功/未推送到服务器/未推送到ActiveMQ"三个状态, 并区分处理方式         - 如何保证启动多个Flask实例和独立sqlite下消息的一致性         - 比较Evenlet和Gevent中提供的Socket API, 看看能不能解决Evenlet中遇到的问题         - 数据库, socketIO, MQ三者独立的**单元测试**         - 并发性能测试

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -69,6 +69,10 @@
                 flush_message(msg);
             });
 
+            socket.on('radio', function (msg) {
+                flush_message(msg);
+            });
+
             $('form#emit').submit(function (event) {
                 socket.emit('to_server', {data: $('#emit_data').val()});
                 $("#emit_data").val("");
