--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,10 +5,7 @@
 
 {% block page_content %}
     <div class="page-header">
-        <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-        {% if not known %}
-            <p>Pleased to meet you!</p>
-        {% endif %}
+        <h1>你好, {% if name %}{{ name }}{% else %}请登录{% endif %}!</h1>
     </div>
     {% if not known %}
         {{ wtf.quick_form(form) }}
