修复错误: 蓝图的函数入口未更新成public_channel
必须发送带内容的信息

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
                     <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('main.chat') }}">ChatPage</a></li>
+                    <li><a href="{{ url_for('main.public_channel') }}">ChatPage</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('main.clear') }}">Clear</a></li>
