--- a/app/templates/public_channel.html
+++ b/app/templates/public_channel.html
@@ -50,7 +50,8 @@
 
 {% block scripts %}
     {{ super() }}
-    <script type="text/javascript" src="/static/socketio/socket.io.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js.map"></script>
     <script type="text/javascript" src="/static/jquery/jquery-3.2.1.min.js"></script>
     <script>
         function flush_message(msg) {
