--- a/app/templates/topic_channel.html
+++ b/app/templates/topic_channel.html
@@ -54,8 +54,8 @@
 
 {% block scripts %}
     {{ super() }}
-    <script type="text/javascript" src="/static/socketio/socket.io.js"></script>
-    <script type="text/javascript" src="/static/jquery/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js.map"></script>
     <script>
         function flush_message(msg) {
             if(msg.topic == "public"){
