--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,9 +22,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('main.index') }}">登录</a></li>
-                </ul>
-                <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('main.public_channel') }}">公共频道</a></li>
                 </ul>
                 <ul class="nav navbar-nav dropdown">
@@ -39,8 +36,12 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('main.clear') }}">登出</a></li>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if current_user.is_authenticated %}
+                    <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('auth.login') }}">登录</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
