--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,20 +29,19 @@
                         <a class="nav navbar-nav dropdown-toggle" data-toggle="dropdown" href="#">频道列表<b
                                 class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('main.topic_channel', topic_name='test1') }}">子频道1</a></li>
-                            <li><a href="{{ url_for('main.topic_channel', topic_name='test2') }}">子频道2</a></li>
-                            <li><a href="{{ url_for('main.topic_channel', topic_name='test3') }}">子频道3</a></li>
-                            <li><a href="{{ url_for('main.topic_channel', topic_name='test4') }}">子频道4</a></li>
+                            {% for topic_name in topic_name_list %}
+                                <li>
+                                    <a href="{{ url_for('main.topic_channel', topic_name=topic_name) }}">{{ topic_name }}</a>
+                                </li>
+                            {% endfor %}
                         </ul>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
-                    {% else %}
-                    <li><a href="{{ url_for('auth.login') }}">登录</a></li>
-                    {% endif %}
-                </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            {% if current_user.is_authenticated %}
+                                <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
+                            {% else %}
+                                <li><a href="{{ url_for('auth.login') }}">登录</a></li>
+                            {% endif %}
+                        </ul>
             </div>
         </div>
     </div>
